2015-06-02  Jacob Fenton  <bocajnotnef@gmail.com>

   * scripts/normalize-by-median.py: implemented broken_paired_reader
   * tests/test_scripts.py: modified tests to properly use new args

2015-06-01  Jacob Fenton  <bocajnotnef@gmail.com>

   * scripts/normalize-by-median.py: major refactoring to use context
   managers and classes; fixed -R
   * tests/test_scripts.py: added test for normalize's -R arg
   
2015-06-01  Tamer Mansour <drtamermansour@gmail.com>

   * scripts/normalize-by-median.py: changed to count kmers from both PE reads 
   when either one of them is below the coverage cutoff
   * tests/test_scripts.py: Added test for new behaviour

2015-05-26  Titus Brown  <titus@idyll.org>

   * khmer/_khmermodule.cc: refactor CPython layer so that KHashtable
   is at base of CountingHash and Hashbits.
   * lib/hashbits.hh: add n_entries() function from Hashtable::n_entries.
   * lib/hashtable.hh: add several virtual functions to Hashtable that exist in
   CountingHash and Hashbits.

2015-05-26  Titus Brown  <titus@idyll.org>

   * khmer/{__init__.py,_khmermodule.cc},lib/labelhash.{cc,hh},
   lib/{hashtable,khmer}.hh: changed LabelHash to be a "friend" of Hashtable,
   rather than a subclass; allowed initialization with either a CountingHash
   or a Hashbits; added 'graph' attribute to the Python object to store a
   reference to host object.
   * lib/labelhash.{cc,hh}: changed TagPtr maps to Tag maps to fix disastrous
   bug.
   * lib/labelhash.{cc,hh}: added save/load_tags_and_labels functions for
   saving and loading labels.
   * tests/test_labelhash.py: removed unnecessary tests; added tests for save
   and load.
   * sandbox/sweep-reads.py: updated with LabelHash changes.

2015-05-26  Kevin Murray  <spam@kdmurray.id.au>

   * lib/Makefile: Remove old libkhmer.so versions during make clean

2015-05-25  Kevin Murray  <spam@kdmurray.id.au>

   * Makefile: Fix issue with 'lib' target not building by using FORCE
