@@ -2,6 +2,8 @@
 
    * scripts/normalize-by-median.py: implemented broken_paired_reader
    * tests/test_scripts.py: modified tests to properly use new args
+   * khmer/utils.py: added force-paired option to broken_paired_reader (@ctb)
+
 
 2015-06-01  Jacob Fenton  <bocajnotnef@gmail.com>
 
